--- a/website/static/package.json
+++ b/website/static/package.json
@@ -20,6 +20,7 @@
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-vue": "^5.2.2",
+    "js-cookie": "^2.2.0",
     "style-loader": "^0.23.1",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
@@ -28,6 +29,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "uuid": "^3.3.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.0"
