--- a/website/static/package.json
+++ b/website/static/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "moment": "^2.24.0",
     "uuid": "^3.3.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.2",
